--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
 <h2><%= @article.title %></h2>
 <p><%= @article.body %></p>
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Really delete the article?" } %><br>
 <%= link_to "<< Back to Articles List", articles_path %>
